--- a/RGB.Back/RGB.Back/appsettings.json
+++ b/RGB.Back/RGB.Back/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "Rizz": "Data Source=sparkle206-sparkle.myftp.biz;Initial Catalog=Rizz;Integrated Security=true;TrustServerCertificate=true;"
+        "Rizz": "Data Source=sparkle206-sparkle.myftp.biz;Initial Catalog=Rizz;User Id=pika;Password=pikaka;Sql Server Authentication=true;TrustServerCertificate=true;"
     },
     "Logging": {
         "LogLevel": {
