--- a/RGB.Back/RGB.Back/efpt.config.json
+++ b/RGB.Back/RGB.Back/efpt.config.json
@@ -56,6 +56,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[CartItems]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Carts]",
          "ObjectType": 0
       },
