驗證信 待改

--- a/RGB.Back/RGB.Back/appsettings.json
+++ b/RGB.Back/RGB.Back/appsettings.json
@@ -9,4 +9,8 @@
         }
     },
     "AllowedHosts": "*",
+
+    "GmailUsername": "cwpeng.irene@gmail.com",
+    "GmailAppPassword": "xokk jdal gayp mcvo"
+
 }
