--- a/RGB.Back/RGB.Back/appsettings.json
+++ b/RGB.Back/RGB.Back/appsettings.json
@@ -8,6 +8,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "JwtConfig": {
+        "Secret": "tpptdjfvwqpprhgzarcqoizjsmkwlojc"
+    },
     "AllowedHosts": "*",
 
     "GmailUsername": "cwpeng.irene@gmail.com",
