--- a/RGB.Back/RGB.Back/RGB.Back.csproj
+++ b/RGB.Back/RGB.Back/RGB.Back.csproj
@@ -17,4 +17,17 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="D:\RGB BACK\RGB.Back\RGB.Back\.editorconfig" />
+    <None Include="efpt.config.json.user" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EditorConfigFiles Remove="D:\RGB BACK\RGB.Back\RGB.Back\.editorconfig" />
+  </ItemGroup>
+
 </Project>
