--- a/RGB.Back/RGB.Back/efpt.config.json
+++ b/RGB.Back/RGB.Back/efpt.config.json
@@ -64,6 +64,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[ChatMessages]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Collections]",
          "ObjectType": 0
       },
@@ -113,6 +117,14 @@
       },
       {
          "Name": "[dbo].[Messages]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[OderDetails]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[Orders]",
          "ObjectType": 0
       },
       {
