--- a/RGB.Back/RGB.Back/efpt.config.json
+++ b/RGB.Back/RGB.Back/efpt.config.json
@@ -2,7 +2,6 @@
    "CodeGenerationMode": 4,
    "ContextClassName": "RizzContext",
    "ContextNamespace": null,
-   "DefaultDacpacSchema": null,
    "FilterSchemas": false,
    "IncludeConnectionString": false,
    "ModelNamespace": null,
@@ -29,14 +28,6 @@
       },
       {
          "Name": "[dbo].[BanMembers]",
-         "ObjectType": 0
-      },
-      {
-         "Name": "[dbo].[BillDetails]",
-         "ObjectType": 0
-      },
-      {
-         "Name": "[dbo].[BillItems]",
          "ObjectType": 0
       },
       {
@@ -132,10 +123,6 @@
          "ObjectType": 0
       },
       {
-         "Name": "[dbo].[Payment]",
-         "ObjectType": 0
-      },
-      {
          "Name": "[dbo].[Pictures]",
          "ObjectType": 0
       },
@@ -144,11 +131,23 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[TransferMethods]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[TransferPayments]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[TransferRefunds]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[WishListes]",
          "ObjectType": 0
       }
    ],
-   "UiHint": "sparkle\\sql2024.Rizz.dbo",
+   "UiHint": null,
    "UncountableWords": null,
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
