--- a/RGB.Back/RGB.Back/efpt.config.json
+++ b/RGB.Back/RGB.Back/efpt.config.json
@@ -2,6 +2,7 @@
    "CodeGenerationMode": 4,
    "ContextClassName": "RizzContext",
    "ContextNamespace": null,
+   "DefaultDacpacSchema": null,
    "FilterSchemas": false,
    "IncludeConnectionString": false,
    "ModelNamespace": null,
@@ -48,10 +49,6 @@
       },
       {
          "Name": "[dbo].[CartItems]",
-         "ObjectType": 0
-      },
-      {
-         "Name": "[dbo].[Carts]",
          "ObjectType": 0
       },
       {
@@ -103,6 +100,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[LinepayOrders]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Members]",
          "ObjectType": 0
       },
@@ -112,10 +113,6 @@
       },
       {
          "Name": "[dbo].[Messages]",
-         "ObjectType": 0
-      },
-      {
-         "Name": "[dbo].[OderDetails]",
          "ObjectType": 0
       },
       {
@@ -147,7 +144,7 @@
          "ObjectType": 0
       }
    ],
-   "UiHint": null,
+   "UiHint": "sparkle\\sql2024.Rizz.dbo",
    "UncountableWords": null,
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
