--- a/RGB.Back/RGB.Back/appsettings.json
+++ b/RGB.Back/RGB.Back/appsettings.json
@@ -13,7 +13,7 @@
     },
     "AllowedHosts": "*",
 
-    "GmailUsername": "cwpeng.irene@gmail.com",
-    "GmailAppPassword": "xokk jdal gayp mcvo"
+    "GmailUsername": "rizzgamingbase@gmail.com",
+    "GmailAppPassword": "jgye zgba rkzb lsgn"
 
 }
