--- a/RGB.Back/RGB.Back/efpt.config.json
+++ b/RGB.Back/RGB.Back/efpt.config.json
@@ -2,7 +2,6 @@
    "CodeGenerationMode": 4,
    "ContextClassName": "RizzContext",
    "ContextNamespace": null,
-   "DefaultDacpacSchema": null,
    "FilterSchemas": false,
    "IncludeConnectionString": false,
    "ModelNamespace": null,
@@ -84,6 +83,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[FriendRequest]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Friends]",
          "ObjectType": 0
       },
@@ -144,7 +147,7 @@
          "ObjectType": 0
       }
    ],
-   "UiHint": "sparkle\\sql2024.Rizz.dbo",
+   "UiHint": null,
    "UncountableWords": null,
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
