--- a/RGB.Back/RGB.Back/efpt.config.json
+++ b/RGB.Back/RGB.Back/efpt.config.json
@@ -2,6 +2,7 @@
    "CodeGenerationMode": 4,
    "ContextClassName": "RizzContext",
    "ContextNamespace": null,
+   "DefaultDacpacSchema": null,
    "FilterSchemas": false,
    "IncludeConnectionString": false,
    "ModelNamespace": null,
@@ -143,7 +144,7 @@
          "ObjectType": 0
       }
    ],
-   "UiHint": null,
+   "UiHint": "sparkle\\sql2024.Rizz.dbo",
    "UncountableWords": null,
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
